# SDLCmakeDemo

app/: CMakeLists.txt  build.gradle
app/libs/SDL2/: CMakeLists.txt  configure.in
app/libs/SDL2/Xcode/SDL/SDL.xcodeproj/project.xcworkspace/xcuserdata/cry.xcuserdatad/: UserInterfaceState.xcuserstate
app/libs/SDL2/Xcode/SDL/SDL.xcodeproj/xcuserdata/cry.xcuserdatad/xcschemes/: xcschememanagement.plist
app/libs/SDL2/Xcode/SDLTest/SDLTest.xcodeproj/project.xcworkspace/xcuserdata/cry.xcuserdatad/: UserInterfaceState.xcuserstate
app/libs/SDL2/Xcode/SDLTest/SDLTest.xcodeproj/xcuserdata/cry.xcuserdatad/xcschemes/: xcschememanagement.plist
app/libs/SDL2/android-project/: local.properties
app/libs/SDL2/android-project/app/: local.properties
app/libs/SDL2/src/hidapi/android/: CMakeLists.txt
app/libs/SDL2/src/joystick/android/: SDL_sysjoystick.c
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: log.h  native-lib-audio.cpp  native-lib-bmg.cpp  native-lib-su.cpp  native-lib.cpp
app/src/main/java/com/cry/cry/sdlcmakedemo/: MainActivity.java
app/src/main/java/org/libsdl/app/: HIDDeviceBLESteamController.java  SDLActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
